...
            android:inputType="textPersonName"
            android:text="@={player.playerName}"
            android:enabled="@{player.isIncluded}"
            android:visibility="@{player.isHuman ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/checkbox_player_active"
            app:layout_constraintEnd_toStartOf="@id/switch_player_type" />

        <Spinner
            android:id="@+id/spinner_ai_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:entries="@{AI.getBasicAI()}"
            android:selectedItemPosition="@={player.selectedAIPosition}"
            android:enabled="@{player.isIncluded}"
            android:visibility="@{player.isHuman ? View.INVISIBLE : View.VISIBLE}"
...
