<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/pickPlayersFragment"
        android:icon="@drawable/mdi_face_man_black_24dp"
        android:title="@string/players" />
    <item
        android:id="@+id/gameFragment"
        android:icon="@drawable/mdi_dice_6_black_24dp"
        android:title="@string/game" />
    <item
        android:id="@+id/rankingsFragment"
        android:icon="@drawable/mdi_format_list_numbered_black_24dp"
        android:title="@string/rankings" />
</menu>